--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="note" style="transform: rotate(-2deg)">you.</div>
     </div>
 
-    <a href="https://val-6.vercel.app" class="arrow-link">↑</a>
+    <a href="https://beyyyy4.vercel.app/" class="arrow-link">↑</a>
 
     <script>
         const stickers = ['🧸','🎀','🍭','💖','💌','🍓','✨','🐾','🌹'];
@@ -146,3 +146,4 @@
 
 </body>
 </html>
+
